--- a/S03.01-Solution-RecyclerView/app/build.gradle
+++ b/S03.01-Solution-RecyclerView/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.example.android.sunshine"
@@ -21,7 +21,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.1.0'
+    //noinspection GradleCompatible
+    compile 'com.android.support:appcompat-v7:25.4.0'
 
     // COMPLETED (1) Add RecyclerView dependency
     compile 'com.android.support:recyclerview-v7:25.0.1'
